Java SE 11 pom.xml changes; Intoduction to var